--- a/style.css
+++ b/style.css
@@ -85,8 +85,12 @@ aside {
 .info {
   display: grid;
 }
+
+.weather-img{
+  width: 25%;
+}
 #icon {
-  width: 100%;
+  width: 100% ;
   height: 100%;
 }
 
